<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="main_text">My First Application</string>
    <string name="student_info">Student: Shaumyan\nGroup: 3.2ISiP2</string>
    <string name="avatar_description">The author avatar</string>
    <string name="menu_description">Menu</string>
    <string name="like_description">like</string>
    <string name="share_description">share</string>
    <string name="views_description">views</string>
    <string name="edit_post">Edit</string>
    <string name="remove_post">Delete</string>
    <string name="post_hint">What’s new with you?</string>
    <string name="save_post">To publish</string>
    <string name="cancel_edit_hint">Editing...</string>
    <string name="cancel_edit">Cancel</string>
    <string name="add_post">Add post</string>
    <string name="edit_post_title">new post</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="edit_post_edit_title">edit_post</string>
    <string name="error_empty_content">The text cannot be empty</string>
    <string name="play_video">play video</string>
    <string name="open_external">Open in an external application</string>
    <string name="error_no_video_app">No video viewing app found</string>
    <string name="error_cannot_open_video">Couldn open the video</string>
    <string name="share_post_via">share postvia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="post_removed">post removed</string>

</resources>